relpy/sharpe/SHARPEParser.py
# Generated from relpy/sharpe/SHARPE.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SHARPEParser ( Parser ):

    grammarFileName = "SHARPE.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bind'", "'BIND'", "'include'", "'/'", 
                     "'format'", "'end'", "'markov'", "'MARKOV'", "'reward'", 
                     "'REWARD'", "'END'", "'ftree'", "'FTREE'", "'repeat'", 
                     "'basic'", "'and'", "'or'", "'kofn'", "','", "'exp'", 
                     "'('", "')'", "'prob'", "'cdf'", "'+'", "'-'", "'*'", 
                     "'sysprob'", "'exrss'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "FLOAT", "ID", "NL", 
                      "WS" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_bindStatement = 2
    RULE_bindDecleration = 3
    RULE_includeStatement = 4
    RULE_filePath = 5
    RULE_formatStatement = 6
    RULE_bindBlock = 7
    RULE_markovBlock = 8
    RULE_markovBlockDecleration = 9
    RULE_markovRewardBlock = 10
    RULE_markovInitBlock = 11
    RULE_markovTransDecrelation = 12
    RULE_markovRwdStateDecrelation = 13
    RULE_markovInitStateDecrelation = 14
    RULE_ftreeBlock = 15
    RULE_ftreeBlockDecleration = 16
    RULE_ftreeStatement = 17
    RULE_ftreeRepeatDecrelation = 18
    RULE_ftreeBasicDecrelation = 19
    RULE_ftreeAndDecrelation = 20
    RULE_ftreeOrDecrelation = 21
    RULE_ftreeKofNDecrelation = 22
    RULE_probExpr = 23
    RULE_expDistribution = 24
    RULE_probDistribution = 25
    RULE_cdfDistribution = 26
    RULE_expr = 27
    RULE_function_expr = 28
    RULE_exp_function = 29
    RULE_markovprob_function = 30
    RULE_ftsysprob_function = 31
    RULE_markovexrss_function = 32
    RULE_literal_expr = 33

    ruleNames =  [ "prog", "statement", "bindStatement", "bindDecleration", 
                   "includeStatement", "filePath", "formatStatement", "bindBlock", 
                   "markovBlock", "markovBlockDecleration", "markovRewardBlock", 
                   "markovInitBlock", "markovTransDecrelation", "markovRwdStateDecrelation", 
                   "markovInitStateDecrelation", "ftreeBlock", "ftreeBlockDecleration", 
                   "ftreeStatement", "ftreeRepeatDecrelation", "ftreeBasicDecrelation", 
                   "ftreeAndDecrelation", "ftreeOrDecrelation", "ftreeKofNDecrelation", 
                   "probExpr", "expDistribution", "probDistribution", "cdfDistribution", 
                   "expr", "function_expr", "exp_function", "markovprob_function", 
                   "ftsysprob_function", "markovexrss_function", "literal_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    INT=30
    FLOAT=31
    ID=32
    NL=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.NL)
            else:
                return self.getToken(SHARPEParser.NL, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SHARPEParser.StatementContext)
            else:
                return self.getTypedRuleContext(SHARPEParser.StatementContext,i)


        def getRuleIndex(self):
            return SHARPEParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = SHARPEParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SHARPEParser.T__0) | (1 << SHARPEParser.T__1) | (1 << SHARPEParser.T__2) | (1 << SHARPEParser.T__4) | (1 << SHARPEParser.T__6) | (1 << SHARPEParser.T__7) | (1 << SHARPEParser.T__11) | (1 << SHARPEParser.T__12) | (1 << SHARPEParser.NL))) != 0):
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SHARPEParser.T__0) | (1 << SHARPEParser.T__1) | (1 << SHARPEParser.T__2) | (1 << SHARPEParser.T__4) | (1 << SHARPEParser.T__6) | (1 << SHARPEParser.T__7) | (1 << SHARPEParser.T__11) | (1 << SHARPEParser.T__12))) != 0):
                    self.state = 68
                    self.statement()


                self.state = 71
                self.match(SHARPEParser.NL)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bindStatement(self):
            return self.getTypedRuleContext(SHARPEParser.BindStatementContext,0)


        def markovBlock(self):
            return self.getTypedRuleContext(SHARPEParser.MarkovBlockContext,0)


        def bindBlock(self):
            return self.getTypedRuleContext(SHARPEParser.BindBlockContext,0)


        def ftreeBlock(self):
            return self.getTypedRuleContext(SHARPEParser.FtreeBlockContext,0)


        def includeStatement(self):
            return self.getTypedRuleContext(SHARPEParser.IncludeStatementContext,0)


        def formatStatement(self):
            return self.getTypedRuleContext(SHARPEParser.FormatStatementContext,0)


        def getRuleIndex(self):
            return SHARPEParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SHARPEParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.bindStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.markovBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.bindBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.ftreeBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.includeStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.formatStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bindDecleration(self):
            return self.getTypedRuleContext(SHARPEParser.BindDeclerationContext,0)


        def getRuleIndex(self):
            return SHARPEParser.RULE_bindStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindStatement" ):
                listener.enterBindStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindStatement" ):
                listener.exitBindStatement(self)




    def bindStatement(self):

        localctx = SHARPEParser.BindStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bindStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(_la==SHARPEParser.T__0 or _la==SHARPEParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self.bindDecleration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindDeclerationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None

        def ID(self):
            return self.getToken(SHARPEParser.ID, 0)

        def literal_expr(self):
            return self.getTypedRuleContext(SHARPEParser.Literal_exprContext,0)


        def expr(self):
            return self.getTypedRuleContext(SHARPEParser.ExprContext,0)


        def getRuleIndex(self):
            return SHARPEParser.RULE_bindDecleration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindDecleration" ):
                listener.enterBindDecleration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindDecleration" ):
                listener.exitBindDecleration(self)




    def bindDecleration(self):

        localctx = SHARPEParser.BindDeclerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bindDecleration)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(SHARPEParser.ID)
                self.state = 89
                self.literal_expr()
                localctx.type =  1
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(SHARPEParser.ID)
                self.state = 93
                self.expr(0)
                localctx.type =  2
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filePath(self):
            return self.getTypedRuleContext(SHARPEParser.FilePathContext,0)


        def getRuleIndex(self):
            return SHARPEParser.RULE_includeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStatement" ):
                listener.enterIncludeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStatement" ):
                listener.exitIncludeStatement(self)




    def includeStatement(self):

        localctx = SHARPEParser.IncludeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_includeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(SHARPEParser.T__2)
            self.state = 99
            self.filePath()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilePathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.ID)
            else:
                return self.getToken(SHARPEParser.ID, i)

        def getRuleIndex(self):
            return SHARPEParser.RULE_filePath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilePath" ):
                listener.enterFilePath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilePath" ):
                listener.exitFilePath(self)




    def filePath(self):

        localctx = SHARPEParser.FilePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_filePath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(SHARPEParser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SHARPEParser.T__3 or _la==SHARPEParser.ID:
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==SHARPEParser.T__3 or _la==SHARPEParser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormatStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SHARPEParser.INT, 0)

        def getRuleIndex(self):
            return SHARPEParser.RULE_formatStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormatStatement" ):
                listener.enterFormatStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormatStatement" ):
                listener.exitFormatStatement(self)




    def formatStatement(self):

        localctx = SHARPEParser.FormatStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formatStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(SHARPEParser.T__4)
            self.state = 109
            self.match(SHARPEParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.NL)
            else:
                return self.getToken(SHARPEParser.NL, i)

        def bindDecleration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SHARPEParser.BindDeclerationContext)
            else:
                return self.getTypedRuleContext(SHARPEParser.BindDeclerationContext,i)


        def getRuleIndex(self):
            return SHARPEParser.RULE_bindBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindBlock" ):
                listener.enterBindBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindBlock" ):
                listener.exitBindBlock(self)




    def bindBlock(self):

        localctx = SHARPEParser.BindBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bindBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(_la==SHARPEParser.T__0 or _la==SHARPEParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 113 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 112
                    self.match(SHARPEParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 115 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SHARPEParser.ID or _la==SHARPEParser.NL:
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SHARPEParser.ID:
                    self.state = 117
                    self.bindDecleration()


                self.state = 120
                self.match(SHARPEParser.NL)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(SHARPEParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MarkovBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def markovBlockDecleration(self):
            return self.getTypedRuleContext(SHARPEParser.MarkovBlockDeclerationContext,0)


        def markovInitBlock(self):
            return self.getTypedRuleContext(SHARPEParser.MarkovInitBlockContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.NL)
            else:
                return self.getToken(SHARPEParser.NL, i)

        def markovRewardBlock(self):
            return self.getTypedRuleContext(SHARPEParser.MarkovRewardBlockContext,0)


        def markovTransDecrelation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SHARPEParser.MarkovTransDecrelationContext)
            else:
                return self.getTypedRuleContext(SHARPEParser.MarkovTransDecrelationContext,i)


        def getRuleIndex(self):
            return SHARPEParser.RULE_markovBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkovBlock" ):
                listener.enterMarkovBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkovBlock" ):
                listener.exitMarkovBlock(self)




    def markovBlock(self):

        localctx = SHARPEParser.MarkovBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_markovBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.markovBlockDecleration()
            self.state = 130 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 129
                    self.match(SHARPEParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SHARPEParser.ID or _la==SHARPEParser.NL:
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SHARPEParser.ID:
                    self.state = 134
                    self.markovTransDecrelation()


                self.state = 137
                self.match(SHARPEParser.NL)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SHARPEParser.T__8 or _la==SHARPEParser.T__9:
                self.state = 143
                self.markovRewardBlock()


            self.state = 146
            self.markovInitBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MarkovBlockDeclerationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SHARPEParser.ID, 0)

        def getRuleIndex(self):
            return SHARPEParser.RULE_markovBlockDecleration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkovBlockDecleration" ):
                listener.enterMarkovBlockDecleration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkovBlockDecleration" ):
                listener.exitMarkovBlockDecleration(self)




    def markovBlockDecleration(self):

        localctx = SHARPEParser.MarkovBlockDeclerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_markovBlockDecleration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==SHARPEParser.T__6 or _la==SHARPEParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 149
            self.match(SHARPEParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MarkovRewardBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.NL)
            else:
                return self.getToken(SHARPEParser.NL, i)

        def markovRwdStateDecrelation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SHARPEParser.MarkovRwdStateDecrelationContext)
            else:
                return self.getTypedRuleContext(SHARPEParser.MarkovRwdStateDecrelationContext,i)


        def getRuleIndex(self):
            return SHARPEParser.RULE_markovRewardBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkovRewardBlock" ):
                listener.enterMarkovRewardBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkovRewardBlock" ):
                listener.exitMarkovRewardBlock(self)




    def markovRewardBlock(self):

        localctx = SHARPEParser.MarkovRewardBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_markovRewardBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not(_la==SHARPEParser.T__8 or _la==SHARPEParser.T__9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 153 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 152
                    self.match(SHARPEParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 155 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SHARPEParser.ID or _la==SHARPEParser.NL:
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SHARPEParser.ID:
                    self.state = 157
                    self.markovRwdStateDecrelation()


                self.state = 160
                self.match(SHARPEParser.NL)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MarkovInitBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.NL)
            else:
                return self.getToken(SHARPEParser.NL, i)

        def markovInitStateDecrelation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SHARPEParser.MarkovInitStateDecrelationContext)
            else:
                return self.getTypedRuleContext(SHARPEParser.MarkovInitStateDecrelationContext,i)


        def getRuleIndex(self):
            return SHARPEParser.RULE_markovInitBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkovInitBlock" ):
                listener.enterMarkovInitBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkovInitBlock" ):
                listener.exitMarkovInitBlock(self)




    def markovInitBlock(self):

        localctx = SHARPEParser.MarkovInitBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_markovInitBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not(_la==SHARPEParser.T__5 or _la==SHARPEParser.T__10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 168 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 167
                    self.match(SHARPEParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 170 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SHARPEParser.ID or _la==SHARPEParser.NL:
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SHARPEParser.ID:
                    self.state = 172
                    self.markovInitStateDecrelation()


                self.state = 175
                self.match(SHARPEParser.NL)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(SHARPEParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MarkovTransDecrelationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SHARPEParser.ID)
            else:
                return self.getToken(SHARPEParser.ID, i)

        def expr(self):
            return self.getTypedRuleContext(SHARPEParser.ExprContext,0)


        def getRuleIndex(self):
            return SHARPEParser.RULE_markovTransDecrelation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkovTransDecrelation" ):
                listener.enterMarkovTransDecrelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkovTransDecrelation" ):
                listener.exitMarkovTransDecrelation(self)




    def markovTransDecrelation(self):

        localctx = SHARPEParser.MarkovTransDecrelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_markovTransDecrelation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(SHARPEParser.ID)
            self.state = 184
            self.match(SHARPEParser.ID)
            self.state = 185
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MarkovRwdStateDecrelationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SHARPEParser.ID, 0)
